--- a/ContosoUniversityApi/ContosoUniversityApi.csproj
+++ b/ContosoUniversityApi/ContosoUniversityApi.csproj
@@ -8,5 +8,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ContosoUniversityPocoGenerator.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+    </None>
+  </ItemGroup>
+
 
 </Project>
