--- a/ContosoUniversityApi/ContosoUniversityApi.csproj
+++ b/ContosoUniversityApi/ContosoUniversityApi.csproj
@@ -11,7 +11,20 @@
   <ItemGroup>
     <None Update="ContosoUniversityPocoGenerator.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ContosoUniversityPocoGenerator.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="ContosoUniversityPocoGenerator.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ContosoUniversityPocoGenerator.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 
